--- a/frontend/web/src/app/pages/book-detail-page/_book-detail-page-theme.scss
+++ b/frontend/web/src/app/pages/book-detail-page/_book-detail-page-theme.scss
@@ -10,6 +10,17 @@
     > mat-card {
       background-color: white;
     }
+
+    mat-expansion-panel-header {
+      background: mat-color($primary);
+      mat-panel-title{
+        color: mat-color($primary, default-contrast);
+      }
+    }
+  }
+  .book-title {
+    background-color: mat-color($primary);
+    color: mat-color($primary, default-contrast);
   }
 
 }
