--- a/frontend/web/src/styles.scss
+++ b/frontend/web/src/styles.scss
@@ -3,6 +3,7 @@
 @import './app/pages/home-page/home-page-theme';
 @import './app/pages/publication-page/publication-page-theme';
 @import './app/pages/book-detail-page/book-detail-page-theme';
+@import './app/pages/user-page/user-page-theme';
 @import '~@angular/material/_theming';
 
 @mixin material-docs-app-theme($theme) {
@@ -21,6 +22,7 @@
   @include home-page-theme($theme);
   @include publication-page-theme($theme);
   @include book-detail-page-theme($theme);
+  @include user-page-theme($theme);
 }
 
 // Include material core styles.
