--- a/frontend/web/src/app/shared/navbar/navbar.component.html
+++ b/frontend/web/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="docs-navbar-header">
   <a mat-button class="docs-button" routerLink="/" aria-label="Angular Material">
     <img class="docs-angular-logo"
-         src="../../../assets/img/homepage/angular-white-transparent.svg"
+         src="assets/img/homepage/angular-white-transparent.svg"
          alt="angular">
     <span>Athena</span>
   </a>
