user setting page

--- a/frontend/web/src/app/pages/user-page/_user-page-theme.scss
+++ b/frontend/web/src/app/pages/user-page/_user-page-theme.scss
@@ -13,4 +13,8 @@
   }
 
   @include user-setting-page-theme($theme);
+
+  div#container {
+    background-color: mat-color($background, background);
+  }
 }
