--- a/frontend/web/src/app/pages/user-page/user-page.component.html
+++ b/frontend/web/src/app/pages/user-page/user-page.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="authService.user">
+<div *ngIf="authService.user" id="container">
   <mat-card class="user-page-header">
     <h1>{{authService.user.username}}</h1>
   </mat-card>
