--- a/frontend/web/src/app/pages/user-page/user-setting-page/_user-setting-page-theme.scss
+++ b/frontend/web/src/app/pages/user-page/user-setting-page/_user-setting-page-theme.scss
@@ -1,9 +1,12 @@
-@mixin user-setting-page-theme($theme){
+@mixin user-setting-page-theme($theme) {
   $primary: map-get($theme, primary);
   $accent: map-get($theme, accent);
   $warn: map-get($theme, warn);
   $background: map-get($theme, background);
   $foreground: map-get($theme, foreground);
 
+  .side-nav-drawer {
+    background-color: mat-color($background, background);
+  }
 
 }
